--- a/mobile/app/src/main/res/layout/activity_password_restore.xml
+++ b/mobile/app/src/main/res/layout/activity_password_restore.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg_background"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:background="@drawable/bg_background">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:gravity="center_horizontal">
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
 
         <RelativeLayout
             android:layout_width="wrap_content"
@@ -20,18 +20,18 @@
                 android:id="@+id/restore_password_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
                 android:text="@string/restore_password_label"
                 android:textAppearance="@style/simple_label"
-                android:textSize="40sp"
-                android:layout_alignParentStart="true" />
+                android:textSize="40sp" />
 
             <View
                 android:id="@+id/vector"
                 android:layout_width="156dp"
                 android:layout_height="15dp"
-                android:layout_marginTop="-10dp"
                 android:layout_below="@+id/restore_password_label"
                 android:layout_alignEnd="@+id/restore_password_label"
+                android:layout_marginTop="-10dp"
                 android:background="@drawable/v_underline" />
 
         </RelativeLayout>
@@ -39,10 +39,10 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
+            android:layout_margin="20dp"
             android:gravity="center"
-            android:padding="20dp"
-            android:layout_margin="20dp">
+            android:orientation="vertical"
+            android:padding="20dp">
 
             <TextView
                 android:id="@+id/email_reg_tv"
@@ -57,19 +57,19 @@
                 android:id="@+id/email_reg_et"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textEmailAddress"
                 android:layout_marginVertical="20dp"
                 android:background="@drawable/et_edittext"
                 android:importantForAutofill="no"
-                tools:ignore="LabelFor"  />
+                android:inputType="textEmailAddress"
+                tools:ignore="LabelFor" />
 
             <Button
                 android:id="@+id/restore_password_btn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
                 android:background="@drawable/btn_simple"
                 android:text="@string/restore_password"
-                android:layout_marginBottom="20dp"
                 android:textAppearance="@style/simple_button" />
 
         </LinearLayout>
