--- a/mobile/app/src/main/res/layout/item_list.xml
+++ b/mobile/app/src/main/res/layout/item_list.xml
@@ -9,13 +9,15 @@
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:layout_marginStart="5dp"
-        android:background="@drawable/btn_delete_active"/>
+        android:background="@drawable/btn_delete_active" />
+
     <Button
         android:id="@+id/edit_item_btn"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_marginStart="5dp"
-        android:background="@drawable/btn_edit"/>
+        android:background="@drawable/btn_edit" />
+
     <TextView
         android:id="@+id/name_item_tv"
         android:layout_width="wrap_content"
@@ -24,36 +26,37 @@
         android:layout_weight="1.2"
         android:ellipsize="none"
         android:scrollHorizontally="false"
-        android:textSize="16sp"
-        android:textAppearance="@style/simple_label" />
+        android:textAppearance="@style/simple_label"
+        android:textSize="16sp" />
+
     <TextView
         android:id="@+id/quantity_item_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
         android:layout_weight="0.4"
         android:ellipsize="none"
         android:scrollHorizontally="false"
-        android:layout_marginStart="5dp"
-        android:textSize="16sp"
-        android:textAppearance="@style/simple_label"/>
+        android:textAppearance="@style/simple_label"
+        android:textSize="16sp" />
+
     <TextView
         android:id="@+id/unit_item_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
         android:layout_weight="0.4"
         android:ellipsize="none"
         android:scrollHorizontally="false"
-        android:layout_marginStart="5dp"
-        android:textSize="16sp"
-        android:textAppearance="@style/simple_label"/>
+        android:textAppearance="@style/simple_label"
+        android:textSize="16sp" />
 
     <Button
         android:id="@+id/who_take_item_btn"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:background="@drawable/btn_person"
-        android:visibility="invisible"
-        />
+        android:visibility="invisible" />
 
     <CheckBox
         android:id="@+id/take_element_cb"
