--- a/mobile/app/src/main/res/layout/activity_add_member.xml
+++ b/mobile/app/src/main/res/layout/activity_add_member.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:padding="20dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg_background">
+    android:background="@drawable/bg_background"
+    android:padding="20dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:gravity="center_horizontal">
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
 
         <RelativeLayout
             android:layout_width="wrap_content"
@@ -24,18 +23,18 @@
                 android:id="@+id/edit_members_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
                 android:text="@string/add_members_label"
                 android:textAppearance="@style/simple_label"
-                android:textSize="40sp"
-                android:layout_alignParentStart="true" />
+                android:textSize="40sp" />
 
             <View
                 android:id="@+id/vector"
                 android:layout_width="156dp"
                 android:layout_height="15dp"
-                android:layout_marginTop="-10dp"
                 android:layout_below="@+id/edit_members_label"
                 android:layout_alignEnd="@+id/edit_members_label"
+                android:layout_marginTop="-10dp"
                 android:background="@drawable/v_underline" />
 
         </RelativeLayout>
@@ -43,10 +42,10 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
+            android:background="@drawable/bg_round_box_dark"
             android:gravity="center"
-            android:padding="20dp"
-            android:background="@drawable/bg_round_box_dark">
+            android:orientation="vertical"
+            android:padding="20dp">
 
             <TextView
                 android:id="@+id/name_tv"
@@ -54,35 +53,35 @@
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
                 android:textAppearance="@style/simple_label_bold"
-                android:textSize="30sp"
-                android:textColor="@color/yellow" />
+                android:textColor="@color/yellow"
+                android:textSize="30sp" />
 
             <View
                 android:id="@+id/vector_2"
                 android:layout_width="match_parent"
                 android:layout_height="10dp"
-                android:layout_marginBottom="20dp"
                 android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
                 android:background="@drawable/v_line_white" />
 
             <EditText
                 android:id="@+id/infix_add_et"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="text"
-                android:background="@drawable/et_simple"
-                android:hint="@string/find_user_hint"
                 android:layout_marginBottom="20dp"
-                android:textColor="@color/light_gray"
+                android:background="@drawable/et_simple"
                 android:drawableEnd="@drawable/ic_search"
-                android:importantForAutofill="no" />
+                android:hint="@string/find_user_hint"
+                android:importantForAutofill="no"
+                android:inputType="text"
+                android:textColor="@color/light_gray" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/browse_members_add_rv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                tools:listitem="@layout/item_user_search"
-                android:layout_marginBottom="10dp"/>
+                android:layout_marginBottom="10dp"
+                tools:listitem="@layout/item_user_search" />
 
         </LinearLayout>
 
