--- a/mobile/app/src/main/res/layout/activity_change_password.xml
+++ b/mobile/app/src/main/res/layout/activity_change_password.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,8 +9,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:gravity="center_horizontal">
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
 
         <RelativeLayout
             android:layout_width="wrap_content"
@@ -23,18 +22,18 @@
                 android:id="@+id/change_password_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
                 android:text="@string/change_password_label"
                 android:textAppearance="@style/simple_label"
-                android:textSize="40sp"
-                android:layout_alignParentStart="true" />
+                android:textSize="40sp" />
 
             <View
                 android:id="@+id/vector"
                 android:layout_width="156dp"
                 android:layout_height="15dp"
-                android:layout_marginTop="-10dp"
                 android:layout_below="@+id/change_password_label"
                 android:layout_alignEnd="@+id/change_password_label"
+                android:layout_marginTop="-10dp"
                 android:background="@drawable/v_underline" />
 
         </RelativeLayout>
@@ -48,17 +47,17 @@
             android:layout_marginBottom="10dp"
             android:text="@string/insert_old_password_label"
             android:textAppearance="@style/simple_label_bold"
-            android:textSize="24sp"/>
+            android:textSize="24sp" />
 
         <EditText
             android:id="@+id/password_old_et"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textPassword"
             android:layout_marginHorizontal="20dp"
             android:background="@drawable/et_edittext"
             android:importantForAutofill="no"
-            tools:ignore="LabelFor"/>
+            android:inputType="textPassword"
+            tools:ignore="LabelFor" />
 
         <TextView
             android:id="@+id/password_new_tv"
@@ -69,17 +68,17 @@
             android:layout_marginBottom="10dp"
             android:text="@string/insert_new_password_label"
             android:textAppearance="@style/simple_label_bold"
-            android:textSize="24sp"/>
+            android:textSize="24sp" />
 
         <EditText
             android:id="@+id/password_new_et"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textPassword"
             android:layout_marginHorizontal="20dp"
-            android:importantForAutofill="no"
             android:background="@drawable/et_edittext"
-            tools:ignore="LabelFor"/>
+            android:importantForAutofill="no"
+            android:inputType="textPassword"
+            tools:ignore="LabelFor" />
 
         <TextView
             android:id="@+id/password_new_confirm_tv"
@@ -90,25 +89,25 @@
             android:layout_marginBottom="10dp"
             android:text="@string/repeat_new_password_label"
             android:textAppearance="@style/simple_label_bold"
-            android:textSize="24sp"/>
+            android:textSize="24sp" />
 
         <EditText
             android:id="@+id/password_new_confirm_et"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textPassword"
             android:layout_marginHorizontal="20dp"
-            android:importantForAutofill="no"
             android:background="@drawable/et_edittext"
-            tools:ignore="LabelFor"/>
+            android:importantForAutofill="no"
+            android:inputType="textPassword"
+            tools:ignore="LabelFor" />
 
         <Button
             android:id="@+id/save_changes_new_password_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/btn_simple"
-            android:layout_marginVertical="30dp"
             android:layout_marginHorizontal="20dp"
+            android:layout_marginVertical="30dp"
+            android:background="@drawable/btn_simple"
             android:text="@string/save_changes"
             android:textAppearance="@style/simple_button"
             android:textColor="@color/light_gray"
