--- a/mobile/app/src/main/res/layout/activity_edit_members.xml
+++ b/mobile/app/src/main/res/layout/activity_edit_members.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_background">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:gravity="center_horizontal">
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
 
         <RelativeLayout
             android:layout_width="wrap_content"
@@ -22,18 +22,18 @@
                 android:id="@+id/edit_members_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
                 android:text="@string/edit_members_label"
                 android:textAppearance="@style/simple_label"
-                android:textSize="40sp"
-                android:layout_alignParentStart="true" />
+                android:textSize="40sp" />
 
             <View
                 android:id="@+id/vector"
                 android:layout_width="156dp"
                 android:layout_height="15dp"
-                android:layout_marginTop="-10dp"
                 android:layout_below="@+id/edit_members_label"
                 android:layout_alignEnd="@+id/edit_members_label"
+                android:layout_marginTop="-10dp"
                 android:background="@drawable/v_underline" />
 
         </RelativeLayout>
@@ -41,11 +41,11 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:gravity="center"
-            android:padding="20dp"
             android:layout_margin="20dp"
-            android:background="@drawable/bg_round_box_dark">
+            android:background="@drawable/bg_round_box_dark"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:padding="20dp">
 
             <TextView
                 android:id="@+id/name_wallet_tv"
@@ -53,31 +53,31 @@
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
                 android:textAppearance="@style/simple_label_bold"
-                android:textSize="30sp"
-                android:textColor="@color/yellow" />
+                android:textColor="@color/yellow"
+                android:textSize="30sp" />
 
             <View
                 android:id="@+id/vector_2"
                 android:layout_width="match_parent"
                 android:layout_height="10dp"
-                android:layout_marginBottom="20dp"
                 android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
                 android:background="@drawable/v_line_white" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/browse_members_add_rv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                tools:listitem="@layout/item_edit_user_wallet"
-                android:layout_marginBottom="20dp"/>
+                android:layout_marginBottom="20dp"
+                tools:listitem="@layout/item_edit_user_wallet" />
 
             <Button
                 android:id="@+id/send_invitations_btn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/bg_round_box_light"
-                android:layout_marginVertical="10dp"
                 android:layout_marginHorizontal="20dp"
+                android:layout_marginVertical="10dp"
+                android:background="@drawable/bg_round_box_light"
                 android:text="@string/send_invitations_to_wallet"
                 android:textAppearance="@style/simple_button"
                 android:textColor="@color/yellow"
