--- a/mobile/app/src/main/res/layout/activity_expense.xml
+++ b/mobile/app/src/main/res/layout/activity_expense.xml
@@ -1,119 +1,118 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="20dp"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="@drawable/bg_background"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:padding="20dp">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/bg_round_box_dark"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:padding="20dp">
+
+        <TextView
+            android:id="@+id/name_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:textAppearance="@style/simple_label_bold"
+            android:textColor="@color/yellow"
+            android:textSize="36sp" />
+
+        <View
+            android:id="@+id/vector_2"
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/v_line_white" />
+
+        <TextView
+            android:id="@+id/owner_expense_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/owner_expense_label"
+            android:textAppearance="@style/simple_label"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/category_expanse_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/category_label"
+            android:textAppearance="@style/simple_label"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/cost_expense_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/cost_expense_label"
+            android:textAppearance="@style/simple_label"
+            android:textSize="20sp" />
+
+        <TextView
+            android:id="@+id/date_expense_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:layout_weight="1"
+            android:text="@string/date_label"
+            android:textAppearance="@style/simple_label"
+            android:textSize="20sp" />
+
+        <View
+            android:id="@+id/vector_3"
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/v_line_white" />
+
+        <ImageView
+            android:id="@+id/receipt_iv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="5dp"
+            android:adjustViewBounds="true" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="20dp"
-            android:orientation="vertical"
-            android:gravity="center"
-            android:background="@drawable/bg_round_box_dark">
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/bg_round_box_light"
+            android:padding="10dp">
 
-            <TextView
-                android:id="@+id/name_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:textAppearance="@style/simple_label_bold"
-                android:textSize="36sp"
-                android:textColor="@color/yellow" />
-
-            <View
-                android:id="@+id/vector_2"
-                android:layout_width="match_parent"
-                android:layout_height="10dp"
-                android:layout_marginBottom="20dp"
-                android:layout_marginTop="20dp"
-                android:background="@drawable/v_line_white" />
-
-            <TextView
-                android:id="@+id/owner_expense_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textAppearance="@style/simple_label"
-                android:textSize="20sp"
-                android:text="@string/owner_expense_label" />
-
-            <TextView
-                android:id="@+id/category_expanse_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textAppearance="@style/simple_label"
-                android:textSize="20sp"
-                android:text="@string/category_label" />
-
-            <TextView
-                android:id="@+id/cost_expense_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="@style/simple_label"
-                android:textSize="20sp"
-                android:layout_weight="1"
-                android:text="@string/cost_expense_label" />
-
-            <TextView
-                android:id="@+id/date_expense_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
-                android:textAppearance="@style/simple_label"
-                android:textSize="20sp"
-                android:layout_weight="1"
-                android:text="@string/date_label" />
-
-            <View
-                android:id="@+id/vector_3"
-                android:layout_width="match_parent"
-                android:layout_height="10dp"
-                android:layout_marginTop="20dp"
-                android:background="@drawable/v_line_white" />
-
-            <ImageView
-                android:id="@+id/receipt_iv"
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/for_who_rv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:adjustViewBounds="true"
-                android:layout_marginVertical="5dp"
-                />
+                tools:listitem="@layout/item_user_search" />
 
-          <LinearLayout
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:padding="10dp"
-              android:layout_marginBottom="20dp"
-              android:background="@drawable/bg_round_box_light">
-
-              <androidx.recyclerview.widget.RecyclerView
-                  android:id="@+id/for_who_rv"
-                  android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  tools:listitem="@layout/item_user_search" />
-
-          </LinearLayout>
-
-            <Button
-                android:id="@+id/edit_expense_btn"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/btn_simple"
-                android:text="@string/edit_expense"
-                android:layout_marginBottom="20dp"
-                android:textAppearance="@style/simple_button" />
-
-            <Button
-                android:id="@+id/delete_expense_btn"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/btn_danger"
-                android:text="@string/delete_expense"
-                android:layout_marginBottom="10dp"
-                android:textAppearance="@style/simple_button" />
         </LinearLayout>
+
+        <Button
+            android:id="@+id/edit_expense_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/btn_simple"
+            android:text="@string/edit_expense"
+            android:textAppearance="@style/simple_button" />
+
+        <Button
+            android:id="@+id/delete_expense_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/btn_danger"
+            android:text="@string/delete_expense"
+            android:textAppearance="@style/simple_button" />
+    </LinearLayout>
 </ScrollView>
