--- a/mobile/app/src/main/res/layout/activity_profile.xml
+++ b/mobile/app/src/main/res/layout/activity_profile.xml
@@ -1,40 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:tools="http://schemas.android.com/tools"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg_background"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:background="@drawable/bg_background">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:gravity="center">
+        android:gravity="center"
+        android:orientation="vertical">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_marginStart="20dp">
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp">
 
             <TextView
                 android:id="@+id/profile_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
                 android:text="@string/profil"
                 android:textAppearance="@style/simple_label"
-                android:textSize="40sp"
-                android:layout_alignParentStart="true" />
+                android:textSize="40sp" />
 
             <View
                 android:id="@+id/vector_1"
                 android:layout_width="156dp"
                 android:layout_height="15dp"
-                android:layout_marginTop="-10dp"
-                android:layout_marginStart="50dp"
                 android:layout_below="@+id/profile_label"
                 android:layout_alignEnd="@+id/profile_label"
+                android:layout_marginStart="50dp"
+                android:layout_marginTop="-10dp"
                 android:background="@drawable/v_underline" />
 
         </RelativeLayout>
@@ -45,53 +45,53 @@
             android:layout_height="200dp"
             android:elevation="5dp"
             android:padding="20dp"
-            android:src="@drawable/profile_picture_placeholder"
             android:scaleType="centerCrop"
-            />
+            android:src="@drawable/profile_picture_placeholder" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="10dp"
             android:layout_margin="20dp"
-            android:orientation="vertical"
+            android:background="@drawable/bg_round_box_dark"
             android:gravity="center"
-            android:background="@drawable/bg_round_box_dark">
+            android:orientation="vertical"
+            android:padding="10dp">
 
             <TextView
                 android:id="@+id/login_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:text="@string/login_label"
                 android:textAppearance="@style/simple_label_bold"
-                android:textSize="20sp"
-                android:text="@string/login_label" />
+                android:textSize="20sp" />
+
             <TextView
                 android:id="@+id/email_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:text="@string/email_label"
                 android:textAppearance="@style/simple_label_bold"
-                android:textSize="20sp"
-                android:text="@string/email_label" />
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/number_of_wallets_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:text="@string/numer_of_wallets_label"
                 android:textAppearance="@style/simple_label_bold"
-                android:textSize="20sp"
-                android:text="@string/numer_of_wallets_label" />
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/balance_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="@style/simple_label_bold"
-                android:textSize="20sp"
                 android:layout_weight="1"
-                android:text="@string/balance_label" />
+                android:text="@string/balance_label"
+                android:textAppearance="@style/simple_label_bold"
+                android:textSize="20sp" />
 
             <Button
                 android:id="@+id/edit_profile_btn"
@@ -108,67 +108,67 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="10dp"
             android:layout_margin="20dp"
-            android:orientation="vertical"
+            android:background="@drawable/bg_round_box_light"
             android:gravity="center"
-            android:background="@drawable/bg_round_box_light">
+            android:orientation="vertical"
+            android:padding="10dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/bg_round_box_dark"
-                android:paddingVertical="15dp"
                 android:layout_margin="10dp"
+                android:layout_marginBottom="20dp"
+                android:background="@drawable/bg_round_box_dark"
                 android:gravity="center_horizontal"
-                android:layout_marginBottom="20dp">
+                android:paddingVertical="15dp">
+
                 <TextView
                     android:id="@+id/notification_tv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="10dp"
+                    android:text="@string/notifications"
                     android:textAppearance="@style/simple_label_bold"
                     android:textColor="@color/yellow"
-                    android:text="@string/notifications"
-                    android:textSize="24sp">
-                </TextView>
+                    android:textSize="24sp"></TextView>
+
                 <ImageButton
                     android:id="@+id/open_notification_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
-                    android:background="@drawable/btn_list_closed">
-                </ImageButton>
+                    android:background="@drawable/btn_list_closed"></ImageButton>
             </LinearLayout>
 
             <View
                 android:id="@+id/vector"
                 android:layout_width="match_parent"
                 android:layout_height="10dp"
-                android:layout_marginBottom="20dp"
                 android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
                 android:background="@drawable/v_line_gradient" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/notification_invitation_rv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                tools:listitem="@layout/item_notification_invitation"/>
+                tools:listitem="@layout/item_notification_invitation" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/notification_warning_rv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                tools:listitem="@layout/item_notification_warning"/>
+                tools:listitem="@layout/item_notification_warning" />
 
             <TextView
                 android:id="@+id/go_to_statue_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="@string/go_to_statue"
                 android:textAppearance="@style/simple_label_bold"
                 android:textColor="@color/yellow"
-                android:text="@string/go_to_statue"
-                android:textSize="18sp"/>
+                android:textSize="18sp" />
 
         </LinearLayout>
     </LinearLayout>
