--- a/mobile/app/src/main/res/layout/item_edit_user_wallet.xml
+++ b/mobile/app/src/main/res/layout/item_edit_user_wallet.xml
@@ -2,17 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
+    android:layout_marginVertical="5dp"
     android:gravity="center"
-    android:layout_marginVertical="5dp">
+    android:orientation="horizontal">
+
     <TextView
         android:id="@+id/member_name_tv"
         android:layout_width="200dp"
         android:layout_height="match_parent"
+        android:layout_marginHorizontal="20dp"
         android:textAppearance="@style/simple_label"
-        android:textSize="18sp"
-        android:layout_marginHorizontal="20dp">
-    </TextView>
+        android:textSize="18sp"></TextView>
 
     <Button
         android:id="@+id/delete_user_btn"
