--- a/mobile/app/src/main/res/layout/item_expense.xml
+++ b/mobile/app/src/main/res/layout/item_expense.xml
@@ -2,11 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="40dp"
     android:layout_marginBottom="10dp"
-    android:orientation="vertical"
+    android:background="@drawable/bg_round_box_light"
     android:gravity="center"
-    android:background="@drawable/bg_round_box_light">
+    android:orientation="vertical"
+    android:padding="40dp">
 
     <TextView
         android:id="@+id/name_expense_tv"
@@ -14,50 +14,50 @@
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:textAppearance="@style/simple_label_bold"
-        android:textSize="36sp"
-        android:textColor="@color/yellow" />
+        android:textColor="@color/yellow"
+        android:textSize="36sp" />
 
     <View
         android:id="@+id/vector_1"
         android:layout_width="match_parent"
         android:layout_height="10dp"
-        android:layout_marginBottom="20dp"
         android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/v_line_gradient" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_marginBottom="20dp"
-        android:gravity="center">
+        android:gravity="center"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/who_make_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:text="@string/who_make_label"
             android:textAppearance="@style/simple_label"
-            android:textSize="18sp"
-            android:text="@string/who_make_label" />
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/category_expanse_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:text="@string/category_label"
             android:textAppearance="@style/simple_label"
-            android:textSize="18sp"
-            android:text="@string/category_label" />
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/cost_expense_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="@style/simple_label"
-            android:textSize="18sp"
             android:layout_weight="1"
-            android:text="@string/cost_label" />
+            android:text="@string/cost_label"
+            android:textAppearance="@style/simple_label"
+            android:textSize="18sp" />
 
     </LinearLayout>
 
@@ -65,21 +65,21 @@
         android:id="@+id/vector_2"
         android:layout_width="match_parent"
         android:layout_height="10dp"
-        android:layout_marginBottom="20dp"
         android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/v_line_gradient" />
 
     <TextView
         android:id="@+id/go_to_expense_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
         android:clickable="true"
         android:gravity="center_horizontal"
-        android:layout_marginBottom="10dp"
+        android:text="@string/see_details"
         android:textAppearance="@style/simple_label_bold"
-        android:textSize="18sp"
         android:textColor="@color/light_gray"
-        android:text="@string/see_details"/>
+        android:textSize="18sp" />
 
 
 </LinearLayout>
