--- a/mobile/app/src/main/res/layout/item_member.xml
+++ b/mobile/app/src/main/res/layout/item_member.xml
@@ -2,23 +2,23 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
+    android:background="@drawable/bg_round_box_light"
     android:gravity="center"
-    android:background="@drawable/bg_round_box_light">
+    android:orientation="vertical">
 
     <View
         android:id="@+id/vector_3"
         android:layout_width="match_parent"
         android:layout_height="10dp"
-        android:layout_marginBottom="10dp"
         android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/v_line_white" />
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
         android:layout_marginHorizontal="10dp"
+        android:layout_marginBottom="5dp"
         android:gravity="center">
 
         <TextView
@@ -28,16 +28,16 @@
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
             android:textAppearance="@style/simple_label"
-            android:textSize="22sp"/>
+            android:textSize="22sp" />
 
         <TextView
             android:id="@+id/member_balance_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="@style/simple_label_bold"
             android:layout_alignParentStart="false"
-            android:layout_centerVertical="true"
             android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:textAppearance="@style/simple_label_bold"
             android:textColor="@color/red"
             android:textSize="20sp" />
 
@@ -45,16 +45,16 @@
             android:id="@+id/show_debth_btn"
             android:layout_width="35dp"
             android:layout_height="35dp"
-            android:layout_centerVertical="true"
             android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
             android:visibility="invisible" />
     </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_marginHorizontal="10dp">
+        android:layout_marginHorizontal="10dp"
+        android:gravity="center">
 
         <TextView
             android:id="@+id/member_balance_to_you_tv"
@@ -63,9 +63,8 @@
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
             android:textAppearance="@style/simple_label_bold"
-            android:visibility="gone"
             android:textSize="18sp"
-           />
+            android:visibility="gone" />
 
         <Button
             android:id="@+id/reminder_btn"
@@ -75,17 +74,16 @@
             android:layout_centerVertical="true"
             android:layout_marginHorizontal="10dp"
             android:layout_toStartOf="@+id/handshake_btn"
-            android:visibility="gone"
-            android:background="@drawable/ic_bell" />
+            android:background="@drawable/ic_bell"
+            android:visibility="gone" />
 
         <Button
             android:id="@+id/handshake_btn"
             android:layout_width="35dp"
             android:layout_height="35dp"
-            android:layout_centerVertical="true"
             android:layout_alignParentEnd="true"
-            android:visibility="gone"
+            android:layout_centerVertical="true"
             android:background="@drawable/ic_handshake"
-          />
+            android:visibility="gone" />
     </RelativeLayout>
 </LinearLayout>
