--- a/mobile/app/src/main/res/layout/item_notification_message.xml
+++ b/mobile/app/src/main/res/layout/item_notification_message.xml
@@ -1,35 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="40dp"
     android:layout_margin="10dp"
-    android:orientation="vertical"
+    android:background="@drawable/bg_round_box_dark"
     android:gravity="center"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/bg_round_box_dark">
+    android:orientation="vertical"
+    android:padding="40dp">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="@style/simple_label_bold"
-        android:textSize="36sp"
-        android:textColor="@color/red" />
+        android:textColor="@color/red"
+        android:textSize="36sp" />
 
     <View
         android:id="@+id/vector"
         android:layout_width="match_parent"
         android:layout_height="10dp"
-        android:layout_marginBottom="20dp"
         android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/v_line_white" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_marginBottom="20dp"
-        android:gravity="center">
+        android:gravity="center"
+        android:orientation="vertical">
 
         <TextView
             android:layout_width="wrap_content"
@@ -44,8 +44,8 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/btn_simple"
         android:layout_marginBottom="20dp"
+        android:background="@drawable/btn_simple"
         android:textAppearance="@style/simple_button"
         android:textColor="@color/light_gray"
         app:backgroundTint="@null" />
