--- a/mobile/app/src/main/res/layout/item_notification_warning.xml
+++ b/mobile/app/src/main/res/layout/item_notification_warning.xml
@@ -1,37 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="40dp"
     android:layout_margin="10dp"
-    android:orientation="vertical"
+    android:background="@drawable/bg_round_box_dark"
     android:gravity="center"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/bg_round_box_dark">
+    android:orientation="vertical"
+    android:padding="40dp">
 
     <TextView
         android:id="@+id/warning_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="@style/simple_label_bold"
-        android:textSize="26sp"
         android:text="@string/warning_debth"
-        android:textColor="@color/red" />
+        android:textAppearance="@style/simple_label_bold"
+        android:textColor="@color/red"
+        android:textSize="26sp" />
 
     <View
         android:id="@+id/vector"
         android:layout_width="match_parent"
         android:layout_height="10dp"
-        android:layout_marginBottom="20dp"
         android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/v_line_white" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_marginBottom="20dp"
-        android:gravity="center">
+        android:gravity="center"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/warning_info_tv"
@@ -39,27 +39,27 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
             android:layout_weight="1"
+            android:text="@string/warning_info_text"
             android:textAppearance="@style/simple_label"
-            android:textSize="20sp"
-            android:text="@string/warning_info_text" />
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/owner_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:text="@string/owner_label"
             android:textAppearance="@style/simple_label"
-            android:textSize="20sp"
-            android:text="@string/owner_label" />
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/debt_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:text="@string/debt"
             android:textAppearance="@style/simple_label"
-            android:textSize="20sp"
-            android:text="@string/debt" />
+            android:textSize="20sp" />
 
     </LinearLayout>
 
@@ -67,8 +67,8 @@
         android:id="@+id/accept_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/btn_simple"
         android:layout_marginBottom="20dp"
+        android:background="@drawable/btn_simple"
         android:text="@string/go_to_wallet"
         android:textAppearance="@style/simple_button"
         android:textColor="@color/light_gray"
@@ -78,8 +78,8 @@
         android:id="@+id/delete_notification_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/btn_simple"
         android:layout_marginBottom="20dp"
+        android:background="@drawable/btn_simple"
         android:text="@string/delete_notification"
         android:textAppearance="@style/simple_button"
         android:textColor="@color/light_gray"
