--- a/mobile/app/src/main/res/layout/item_one_list.xml
+++ b/mobile/app/src/main/res/layout/item_one_list.xml
@@ -2,11 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="40dp"
     android:layout_marginBottom="10dp"
-    android:orientation="vertical"
+    android:background="@drawable/bg_round_box_light"
     android:gravity="center"
-    android:background="@drawable/bg_round_box_light">
+    android:orientation="vertical"
+    android:padding="40dp">
 
     <TextView
         android:id="@+id/name_list_tv"
@@ -14,46 +14,46 @@
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:textAppearance="@style/simple_label_bold"
-        android:textSize="36sp"
-        android:textColor="@color/yellow" />
+        android:textColor="@color/yellow"
+        android:textSize="36sp" />
 
     <View
         android:id="@+id/vector"
         android:layout_width="match_parent"
         android:layout_height="10dp"
-        android:layout_marginBottom="20dp"
         android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/v_line_gradient" />
 
     <TextView
         android:id="@+id/number_of_elements_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
         android:layout_marginBottom="10dp"
+        android:gravity="center_horizontal"
+        android:text="@string/number_of_elements_label"
         android:textAppearance="@style/simple_label_bold"
-        android:textSize="18sp"
         android:textColor="@color/yellow"
-        android:text="@string/number_of_elements_label"/>
+        android:textSize="18sp" />
 
     <View
         android:id="@+id/vector_2"
         android:layout_width="match_parent"
         android:layout_height="10dp"
-        android:layout_marginBottom="20dp"
         android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/v_line_gradient" />
 
     <TextView
         android:id="@+id/go_to_list_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
         android:clickable="true"
         android:gravity="center_horizontal"
-        android:layout_marginBottom="10dp"
+        android:text="@string/see_details"
         android:textAppearance="@style/simple_label_bold"
-        android:textSize="18sp"
         android:textColor="@color/light_gray"
-        android:text="@string/see_details"/>
+        android:textSize="18sp" />
 
 </LinearLayout>
