--- a/mobile/app/src/main/res/menu/menu.xml
+++ b/mobile/app/src/main/res/menu/menu.xml
@@ -1,34 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/action_more"
     android:title=""
-    app:showAsAction="never"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    app:showAsAction="never">
     <item
         android:id="@+id/action_menu"
+        android:icon="@drawable/bg_round_box_dark"
         android:title="Profil"
-        app:showAsAction="ifRoom"
-        android:icon="@drawable/bg_round_box_dark">
+        app:showAsAction="ifRoom">
         <menu>
             <item
                 android:id="@+id/goToWallets"
-                android:title="Portfele"
-                app:showAsAction="never"
                 android:textAppearance="@style/simple_label"
-                android:textSize="14sp"/>
+                android:textSize="14sp"
+                android:title="Portfele"
+                app:showAsAction="never" />
             <item
                 android:id="@+id/goToProfile"
-                android:title="Profil"
-                app:showAsAction="never"
                 android:textAppearance="@style/simple_label"
-                android:textSize="14sp"/>
+                android:textSize="14sp"
+                android:title="Profil"
+                app:showAsAction="never" />
             <item
                 android:id="@+id/logout"
-                android:title="Wyloguj"
-                app:showAsAction="never"
                 android:textAppearance="@style/simple_label"
-                android:textSize="14sp"/>
+                android:textSize="14sp"
+                android:title="Wyloguj"
+                app:showAsAction="never" />
         </menu>
     </item>
 </menu>
